maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:7: error: not found: value suivreEst
      case 1 => suivreEst(); etat = 0;
                ^