maze.island.IslandMaze.scala.code
override def run() {
  var etat = 0;
  while (!estSurBiscuit) {
    etat match {
    	case 0 => courirNord(); etat = 1;
    	case 1 => suivreEst(); etat = 0;
    }
  }
}


def courirNord() {
  while(!estFaceMur) {
    forward();
  }
}


def suivreEST() {
  left();
  while (estFaceMur()) {
    right();
  }
  forward();
}